<resources>
    <string name="app_name">Fintracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="one_time_payment">One-time payment</string>
    <string name="daily_payment">Daily</string>
    <string name="one_time">One-time</string>
    <string name="weekly_payment">Weekly</string>
    <string name="monthly_payment">Monthly</string>
    <string name="size_forty">40dp</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="your_register">Register your account!</string>
    <string name="add_expense">+</string>
    <string name="name_hint">Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="add_income">+</string>
    <string name="add_data">Input income or expense:</string>
    <string name="message">Message</string>
    <string name="input">Value</string>
    <string name="confirm">Confirm</string>
    <string name="about_app">About</string>
    <string name="input_type">Input type:</string>
    <string name="about_explanation">Expensee is a platform which could help you to save all important income and expenses in your daily life. Easy to use, your budget tracker is also save and only accessible for you.</string>
    <string name="about_exptwo">Expensee is a platform which could help you to save all important income and expenses in your daily life.\n\nEasy to use, your budget tracker is also safe and only accessible for you.</string>
    <string name="main_page">Main Page</string>
    <string name="about_fr">About</string>
    <string name="exp_about">Expensee is the app which could help you to save all important income and expenses in your daily life.\n\nEasy to use, your budget tracker is also safe and only accessible for you.</string>
</resources>
