<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="IncomeListViewModel"
            type="de.htwberlin.fintracker.screen.income.IncomeListViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_thirtytwo"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_twohundred"
                android:text="@string/one_time" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_twenty"
                android:text="@string/daily_payment" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_twenty"
                android:text="@string/weekly_payment" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_twenty"
                android:text="@string/monthly_payment" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_thirtytwo"
            android:layout_marginEnd="@dimen/size_twenty"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_twoten"
                android:text="Amount of one time payment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_fiftyfive"
                android:text="Amount of daily payment"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_fortyfive"
                android:text="Amount of weekly payment" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_fiftyfive"
                android:text="Amount of monthly payment"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:listitem="@layout/recyclerview_incomes"
                android:padding="@dimen/size_sixteen"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_sixteen"
                android:contentDescription="@string/add_income"
                android:src="@drawable/ic_baseline_add_24"
                android:onClick="@{() -> IncomeListViewModel.onAddIncome() }"/>



        </LinearLayout>
    </LinearLayout>

</layout>
