<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Data to make available to the XML via data binding -->
    <data>
        <variable
            name="ExpenseListViewModel"
            type="de.htwberlin.fintracker.screen.expense.ExpenseListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_thirtytwo"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_twohundred"
                android:text="@string/one_time" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_twenty"
                android:text="@string/daily_payment" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_twenty"
                android:text="@string/weekly_payment" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_twenty"
                android:layout_marginTop="@dimen/size_twenty"
                android:text="@string/monthly_payment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size_thirtytwo"
            android:layout_marginEnd="@dimen/size_twenty"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_twoten"
                android:text="Amount of one time expense" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_fiftyfive"
                android:text="Amount of daily expense"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_fortyfive"
                android:text="Amount of weekly expense" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_fiftyfive"
                android:text="Amount of monthly expense"/>


        </LinearLayout>
    </LinearLayout>

</layout>